1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-26  Marc Horowitz  <marc@mit.edu>

	* klist.c: add -a flag to print the ticket address, and -n flag to
	do so without attempting resolution.  Make klist use the new api
	for stringifying enctypes.

Tue Aug 11 23:38:53 1998  Matthew D Hancher  <mdh@mit.edu>

	* klist.c (do_ccache): Properly check the return value of
	krb5_cc_set_flags() so the right thing happens if there is no CC.
	
Mon Mar 30 17:08:07 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* klist.c (main): Exit with a 0 exit status if everything okay

Wed Feb 18 15:42:57 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.  Remove extraneous whitespace.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Jan 21 15:11:22 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* klist.c (main): returns int, not void. ANSI X3.159-1989
	2.1.2.2.1 says so, and gcc now warns about it.

Sat Feb 15 12:25:14 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Link in ComErr library $(CLIB)

Mon Feb 10 14:59:33 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in:
		Build klist.exe (win32 console app)

Mon Jan 27 16:51:50 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Thu Dec  5 21:59:34 1996  Tom Yu  <tlyu@mit.edu>

	* klist.M: v5srvtab -> krb5.keytab [279]

Wed Nov  6 12:02:59 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* klist.c (main): Check the error return from krb5_init_context(),
 		and print an error message if neceesary.

Tue Sep 10 14:14:21 1996  Tom Yu  <tlyu@mit.edu>

	* klist.M: remove ".so man1/header.doc"

Fri May 10 02:50:58 1996  Richard Basch  <basch@lehman.com>
